--- a/index.html
+++ b/index.html
@@ -33,7 +33,40 @@
 
 <div class="p-4 sm:ml-64">
    <div class="p-4 rounded-lg ">
-      <div id="main"></div>
+      <div id="main">
+     <div class="markdown">
+  <h3 class="text-2xl font-bold">Başlarken</h3>
+  <p>PowerShell'e Hoş Geldiniz!</p>
+  <p>Bu metin, PowerShell'e yeni başlayan geliştiriciler için bir başlangıç noktası sağlamayı amaçlamaktadır. PowerShell, Microsoft tarafından geliştirilen bir betikleme ve otomasyon dilidir. Güçlü komut satırı yetenekleri ve .NET Framework ile entegrasyonuyla, Windows tabanlı sistemlerin yönetimi ve otomasyonu için ideal bir araçtır.</p>
+  <p>PowerShell, Windows, macOS ve Linux dahil olmak üzere farklı işletim sistemlerinde kullanılabilir. İşte PowerShell'i başlatmak için basit adımlar:</p>
+  <ol class="list-decimal list-inside pl-4">
+    <li>Windows İşletim Sistemi:
+      <ul class="list-disc list-inside pl-4">
+        <li>Başlat menüsünü açın.</li>
+        <li>"PowerShell" yazın ve "Windows PowerShell" veya "PowerShell" uygulamasını seçin.</li>
+      </ul>
+    </li>
+    <li>macOS İşletim Sistemi:
+      <ul class="list-disc list-inside pl-4">
+        <li>Terminal uygulamasını açın.</li>
+        <li><code class="bg-gray-200 dark:bg-gray-800 p-1 rounded-lg">pwsh</code> komutunu çalıştırın.</li>
+      </ul>
+    </li>
+    <li>Linux İşletim Sistemi:
+      <ul class="list-disc list-inside pl-4">
+        <li>Terminal uygulamasını açın.</li>
+        <li><code class="bg-gray-200 p-1 dark:bg-gray-800 rounded-lg ">pwsh</code> komutunu çalıştırın.</li>
+      </ul>
+    </li>
+  </ol>
+  <p>PowerShell'i başarıyla başlattığınızda, komutları ve betikleri çalıştırabilirsiniz. İşte basit bir örnek:</p>
+  <pre class="bg-gray-200 p-4 dark:bg-gray-800 rounded-lg "><code>write-host "Merhaba Dünya"</code></pre>
+  <p>Yukarıdaki komut, "Merhaba Dünya" metnini PowerShell penceresine yazdıracaktır. <code>write-host</code> komutu, metni görüntülemek için kullanılır.</p>
+  <p>PowerShell, güçlü bir komut tabanına ve geniş bir modül koleksiyonuna sahiptir. Modüller, çeşitli görevleri gerçekleştirmek için ek işlevler sağlar. PowerShell ile <em>dosya işleme</em>, <em>ağ yönetimi</em>, <em>veritabanı erişimi</em> ve daha fazlasını yapabilirsiniz.</p>
+  <p>PowerShell, komut satırı arayüzüyle etkileşime girmenin yanı sıra, betikler ve otomasyon görevleri oluşturmak için de kullanılabilir. Karmaşık işlemleri otomatikleştirmek veya tekrar eden görevleri kolaylaştırmak için betikler yazabilirsiniz.</p>
+</div>
+
+     </div>
    </div>
 </div>
 <script>
